Remove memory workaround for surefire-maven-plugin. Remove maven-checkstyle-plugin workaround.
(cherry picked from commit ffd8cfdcb46bd1990fe6cf8468dcdee52b308dda)